--- a/homework01/homework_test_modules.ipynb
+++ b/homework01/homework_test_modules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_BatchNormalization (__main__.TestLayers) ... ok\n",
+      "test_ClassNLLCriterion (__main__.TestLayers) ... ok\n",
+      "test_ClassNLLCriterionUnstable (__main__.TestLayers) ... ok\n",
+      "test_Dropout (__main__.TestLayers) ... ok\n",
+      "test_ELU (__main__.TestLayers) ... ok\n",
+      "test_LeakyReLU (__main__.TestLayers) ... ok\n",
+      "test_Linear (__main__.TestLayers) ... ok\n",
+      "test_LogSoftMax (__main__.TestLayers) ... ok\n",
+      "test_Sequential (__main__.TestLayers) ... ok\n",
+      "test_SoftMax (__main__.TestLayers) ... ok\n",
+      "test_SoftPlus (__main__.TestLayers) ... ok\n",
+      "test_adam_optimizer (__main__.TestLayers) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 12 tests in 0.666s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=12 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLayers(unittest.TestCase):\n",
     "    def test_Linear(self):\n",
@@ -265,6 +301,7 @@
     "            layer_input = layer_input.T\n",
     "            layer_output = layer.updateOutput(layer_input)\n",
     "            self.assertTrue(np.sum(np.isclose(layer_output, 0)) != layer_input.size)\n",
+    "            \n",
     "    def test_LeakyReLU(self):\n",
     "        np.random.seed(42)\n",
     "        torch.manual_seed(42)\n",
@@ -430,9 +467,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 81,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_Conv2d (__main__.TestAdvancedLayers) ... ok\n",
+      "test_MaxPool2d (__main__.TestAdvancedLayers) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.309s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestAdvancedLayers(unittest.TestCase):\n",
     "    def test_Conv2d(self):\n",
@@ -531,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
