--- a/homework01/homework_differentiation.ipynb
+++ b/homework01/homework_differentiation.ipynb
@@ -51,13 +51,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$  \n",
+    "dy = d(x^Tx) = d(x^T)x + x^Tdx = (2x, dx) => \\frac{dy}{dx} =  2x\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,13 +85,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$  \n",
+    "dy = dtr(AB) = tr(dAB) = tr(B dA) = tr(\\frac{dy}{dA}^TdA) => \\frac{dy}{dA} = B^T\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,6 +124,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$  \n",
+    "d_{x}y = dx^TAc = (dx, Ac) = (Ac, dx) => \\frac{dy}{dx} = Ac\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\frac{dy}{dA} =\n",
     "$$ "
@@ -136,13 +149,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$  \n",
+    "y = x^TAc = tr(x^TAc) = tr(cx^TA) \\\\\n",
+    "d_{A}y = tr(cx^TdA) = tr(\\frac{dy}{dA}^TdA) => \\frac{dy}{dA} = xc^T\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,7 +216,10 @@
     "\n",
     "**Find**\n",
     "$$\n",
-    "\\frac{dJ}{dF} =  \n",
+    "\\frac{dJ}{dF} = \\\\\n",
+    "J = tr((X - F)(X - F)^T) = tr((X - F)(X^T - F^T)) = tr(XX^T - XF^T - FX^T + FF^T)\\\\\n",
+    "d_{F}J = tr(-XdF^T - dFX^T + dFF^T + FdF^T) = tr((-2X^T + 2F^T)dF)\\\\\n",
+    "\\frac{dJ}{dF} = (-2X^T + 2F^T)^T = 2(F - X) = 2(AS - X)\n",
     "$$ \n",
     "and \n",
     "$$\n",
@@ -226,23 +245,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
